@@ -1,7 +1,11 @@
+2001-03-09  Sam Steingold  <sds@gnu.org>
+
+	* posix.lisp (sysinfo): Export structure accessors.
+
 2001-03-07  Bruno Haible  <haible@clisp.cons.org>
 
-        * stream.d (lisp_completion): Remove end_callback() call from last
-          patch.
+	* stream.d (lisp_completion): Remove end_callback() call from last
+	  patch.
 
 2001-03-06  Sam Steingold  <sds@gnu.org>
 
